@@ -4,6 +4,11 @@ ThisBuild / scalaVersion     := scalaVer
 ThisBuild / version          := "0.1.0-SNAPSHOT"
 ThisBuild / organization     := "com.example"
 ThisBuild / organizationName := "example"
+ThisBuild / javaHome         := Some(file("C:\\Program Files\\Java\\jdk-15.0.2"))
+
+onLoadMessage := {
+  s"Using Java Home: ${((ThisBuild / javaHome).value.map(_.getAbsolutePath)).getOrElse("Not Set")}"
+}
 
 lazy val root = (project in file("."))
   .settings(
@@ -12,5 +17,12 @@ lazy val root = (project in file("."))
       munit % Test,
       sparkCore,   
       sparkSql     
+    ),
+    // Set Java options for running applications
+    fork in run := true,
+    javaOptions in run ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--illegal-access=warn" // This option will log rather than throw when illegal accesses occur
     )
   )
